--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,8 @@ header
 
 .header-button
 {
+    display: inline-block;
+    text-decoration: none;
     font-size: 18px;
     font-weight: 700;
 
@@ -205,7 +207,7 @@ footer
 .footer-btn
 {
     font-size: 18px;
-
+	text-decoration: none;
     display: inline-block;
 
     padding: 12px 40px;
