--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,13 @@ header
     border-radius: 50px;
     background-color: #fff;
     box-shadow: 10px 17px 34px 6px rgba(18, 61, 145, .83);
+    -webkit-transition: 0.2s;
+    -o-transition: 0.2s;
+    transition: 0.2s;
+}
+
+.header-button:hover{
+	box-shadow: none;
 }
 
 header small
@@ -216,6 +223,14 @@ footer
     border: 1px solid #fff;
     border-radius: 50px;
     background-color: transparent;
+    -webkit-transition: 0.2s;
+    -o-transition: 0.2s;
+    transition: 0.2s;
+}
+
+.footer-btn:hover{
+	background-color: #fff;
+	color: #3a7dfd;
 }
 
 /*Адаптив*/
